Fixed graphing data gaps and adjusted station photo

--- a/src/app/station-info-page/station-info/station-info.component.css
+++ b/src/app/station-info-page/station-info/station-info.component.css
@@ -35,7 +35,7 @@
 }
 
 .right img{
-    max-height: 60vh;
+    max-height: 100vh;
     width: 100%;
 }
 
